src/App.css
:root {
  --text-dark: #454545;
  --primary: #19a79a;
  --line-faded: #e0e0e0;
}

body {
  color: #454545;
}
main {
  width: 100%;
  height: 100%;
}
header {
  background-color: white;
  border-bottom: 1px solid var(--line-faded);
}
ul {
  list-style: none;
  padding: 0;
}
footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;

  background-color: white;
  border-top: 1px solid var(--line-faded);
}

p {
  font-size: 14px;
  color: var(--text-dark);
}
a {
  font-size: 14px;
  color: #0066cc;
  text-decoration: none;
}
/*customize scroll bar*/
::-webkit-scrollbar {
  width: 8px;
  margin: 4px;
}

/* Track */
::-webkit-scrollbar-track {
  border-radius: 10px;
  background: #e0e0e0;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #2f7eb9;
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  cursor: pointer;
  width: 14px;
}

.app-root {
  position: relative;
}

.screen {
  width: 100%;
  height: 100vh;
  overflow: hidden;
  background-color: #f7f9f9;
}
.content {
  display: flex;
  flex-direction: row;
  height: 100%;
}
.content-left,
.content-right {
  height: 100%;
}
.content-left {
  flex: 1;
  overflow: hidden;
  background-color: white;
  border-right: 1px solid var(--line-faded);
}
.content-right {
  flex: 5;
}

.default-bg,
.bg-content {
  height: 100%;
}
.default-bg {
  display: flex;
  position: relative;
  background-color: #f7f9f9;
  overflow: hidden;
}
.bg-content {
  display: flex;
  flex: 1;
  flex-direction: column;
  /* justify-content: center; */
  align-items: center;
  overflow: auto;
  z-index: 999;
}

.bg-image-left,
.bg-image-right {
  width: 496px;
  height: 416px;
  position: absolute;
}

.bg-image-left {
  left: 0;
}
.bg-image-right {
  right: 0;
}
.footer-links {
  margin: 8px 0;
  font-size: 14px;
}
.footer-icons {
  display: flex;
}
ul.footer-icons li {
  margin: 0 10px !important;
}
.footer-social {
  color: var(--primary);
}
.card-sharp {
  background-color: #ffff;
  border: 1px solid #e0e0e0;
  padding: 0 40px;
  box-shadow: 2px 3px 4px 0px rgba(215, 212, 212, 0.75);
  -webkit-box-shadow: 2px 3px 4px 0px rgba(215, 212, 212, 0.75);
  -moz-box-shadow: 2px 3px 4px 0px rgba(215, 212, 212, 0.75);
}

.logo-text-center {
  width: 90px;
  height: 78px;
  margin: 20px 0;
}
.manual-login {
  width: 288px;
}
.button-default {
  height: 50px;
  width: 288px;
  background-color: var(--primary);
  border: 1px solid var(--primary);
  border-radius: 100px;
  color: white;
  font-weight: bold;
  font-size: 16px;
  cursor: pointer;
}
.icon-button {
  display: flex;
  height: 50px;
  width: 288px;
  border-radius: 100px;
  border: 1px solid var(--text-dark);
  align-items: center;
  padding: 0 40px;
  cursor: pointer;
  opacity: 1;
  transition: opacity 0.3s;
}

.button-default:hover,
.icon-button:hover {
  opacity: 0.9;
  transition: opacity 0.3s;
}

.icon-button-image {
  width: 24px;
  height: 24px;
}

.icon-button-label {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: bold;
  font-size: 16px;
  margin-left: 20px;
  line-height: 0;
  color: var(--text-dark);
}

.content-center-h {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.heading-1 {
  color: var(--text-dark);
  font-size: 32px;
  font-weight: bold;
  margin: 20px 0;
}

.or-container {
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: center;
}
.or-text-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 30px;
  height: 30px;
  border: 1px solid var(--line-faded);
  border-radius: 50%;
  font-size: 14;
  margin: 15px 20px;
}
.or-text {
  margin: 0;
  line-height: 0;
  color: var(--line-faded);
}
.or-line {
  border-top: 1px solid var(--line-faded);
  width: 56px;
}
.text-field-container {
  margin-bottom: 16px;
}
.text-field-label {
  color: #454545;
}

.text-field {
  width: 100%;
  height: 35px;
  border: 1px solid var(--text-dark);
  border-radius: 4px;
  padding-left: 10px;
  margin-top: 12px;
}

.para-center {
  text-align: center;
}
nav.header-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
nav.header-nav li,
img.logo-horizontal {
  margin: 0 20px;
}
.nav-right {
  display: flex;
  align-items: center;
}
img.user-avatar-header {
  width: 35px;
  height: 35px;
  border-radius: 17.5px;
  border: 1px solid var(--line-faded);
}
img.logo-horizontal {
  width: 140px;
}

.dashboard-bg {
  position: relative;
  height: 100%;
  overflow: hidden;
}
.bg-top-right,
.bg-bottom-left {
  width: 30%;
}
.bg-top-right {
  position: absolute;
  right: 1px;
  top: -13px;
}

.bg-bottom-left {
  position: absolute;
  left: -30px;
  bottom: 76px;
}
.sidebar-link {
  padding: 20px 0;
  padding-left: 25px;
}

.sb-link-content {
  display: flex;
}
.sb-link-icon-container {
  width: 40px;
}
.sb-link-icon {
  font-size: 18px;
  width: 70px;
  color: var(--text-dark);
}
span.sb-link-label {
  font-size: 16px;
  font-weight: bold;
  color: var(--text-dark);
}
.sb-link-icon.active,
span.sb-link-label.active {
  color: white;
}

.sidebar-link.active {
  background-color: var(--primary) !important;
}

.button {
  background-color: var(--primary);
  color: white;
  font-size: 14px;
  border: 1px solid var(--primary);
  border-radius: 100px;
  padding: 8px 15px;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.button:hover {
  opacity: 0.9;
}
.button-icon {
  font-size: 14px;
  margin-right: 10px;
}
.button-outline,
.button-outline-primary,
.button-outline-faded {
  background-color: transparent;
}
.button-outline {
  border-color: 1px solid var(--text-dark);
  color: var(--text-dark);
}
.button-outline-primary {
  border-color: 1px solid var(--primary);
  color: var(--primary);
}
.button-outline-faded {
  border-color: 1px solid var(--text-faded);
  color: var(--text-faded);
}
.sb-btn {
  display: flex;
  width: 100%;
  justify-content: center;
}
.modal {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 9999;
}
.modal-body {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-top: 10px;
}

.modal-close {
  position: absolute;
  cursor: pointer;
  right: 5px;
  top: 5px;
}
.modal-logo {
  width: 64px;
}
.modal-logo-img {
  width: 100%;
}
.modal-title {
  width: 100%;
  display: flex;
  justify-content: center;
}
.modal-subhead {
  font-size: 16px;
  margin-bottom: 0;
}
.modal-info {
  margin-top: 10px;
  margin-bottom: 25px;
}

.card {
  background-color: white;
  border: 1 px solid white;
  border-radius: 10px;
}
.card-body {
  padding: 10px;
}
.number-tabs {
  display: flex;
  align-items: center;
  margin: 10px 0;
}
.number-circle {
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--text-dark);
  width: 30px;
  height: 30px;
  border-radius: 15px;
}
.number-bg-line {
  border-bottom: 1px solid var(--text-dark);
  width: 130px;
}
.number-circle.active {
  background-color: var(--primary);
  border-color: var(--primary);
  color: white;
}
.row-center {
  display: flex;
  justify-content: center;
}
.radio-btn {
  display: flex;
  align-items: center;
  margin-bottom: 8px;
  cursor: pointer;
}
.radio-label {
  margin-left: 10px;
}
.article-body {
  margin: 0 100px;
  margin-bottom: 20px;
  max-width: 500px;
}
.creds-input-fields {
  display: flex;
  justify-content: space-between;
}
.privacy-container {
  max-height: 300px;
  overflow-y: scroll;
  margin: 10px 0;
  padding-right: 10px;
}
.bg-overlay {
  width: 100%;
  height: 100%;
  position: absolute;
}
.offer-card {
  background-color: white;
  border-radius: 10px;
  padding: 20px;
  margin: 5px;
  width: 350px;
}
.offer-card-brand {
  font-weight: bold;
}
.buttons-row {
  display: flex;
}
.container {
  padding: 10px;
  overflow-y: scroll;
}
.flex-row-wrap {
  display: flex;
  flex-wrap: wrap;
}
.group-button {
  margin: 0 10px;
}
.group-button:first-child {
  margin-left: 0;
}
.group-button:last-child {
  margin-right: 0;
}

